@@ -10,6 +10,8 @@
  * Fix output format of ``porcelain.diff`` to match that of
    C Git. (Boris Feld)
 
+ * Return a 404 not found error when repository is not found.
+
 0.19.11	2019-02-07
 
  IMPROVEMENTS
